# servidor_biplas

./: Cargo.toml
src/: main.rs
src/application/tasks/: machines_cleanup.rs  mod.rs
src/config/: settings.rs
src/domain/: mod.rs
src/domain/egestor/: mod.rs
src/domain/egestor/contato/: entity.rs
src/domain/machine/: controller_type.rs  machine_state.rs  mod.rs  sector_type.rs
src/domain/machine/events/: machine_event.rs  mod.rs
src/infrastructure/services/: mod.rs
src/infrastructure/services/egestor/: client.rs  mod.rs
src/interfaces/http/: routes.rs
src/interfaces/http/dto/: egestor_criar_contato.rs  machine_response.rs  mod.rs
src/interfaces/http/handlers/: contador.rs  egestor.rs  hello.rs  machines.rs  mod.rs
src/interfaces/websocket/: handler.rs  mod.rs
src/interfaces/websocket/dto/: esp_message.rs  mod.rs
src/shared/: mod.rs  state.rs
src/shared/extensions/serde/: mod.rs  string_or_number.rs
