[package]
name = "servidor_biplas"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8", features =["ws"]}
reqwest = {version="0.13.3", features=["json"]}
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version="1", features = ["full"]}
rand = "0.10.1"
